buildscript {
	ext {
		springBootVersion = '1.5.8.RELEASE'
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	} 
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'

group = 'top.starrtsea'
version = '1.1.1'
sourceCompatibility = 1.8

repositories {
	mavenCentral()
}

dependencies {
	compile('org.springframework.boot:spring-boot-starter-web'){
		exclude module: "spring-boot-starter-tomcat"
	}
	compile(
		'org.springframework.boot:spring-boot-starter-jdbc',
		'org.springframework.boot:spring-boot-starter-thymeleaf',
		'org.springframework.boot:spring-boot-starter-jetty',
		'org.springframework.boot:spring-boot-starter-actuator',
		'org.springframework.boot:spring-boot-starter-mail',
		'org.springframework.mobile:spring-mobile-device',
		'org.springframework.boot:spring-boot-starter-aop',
		'org.springframework.boot:spring-boot-starter-cache',
		'org.springframework.boot:spring-boot-devtools',
		'org.springframework.boot:spring-boot-configuration-processor'
	)
	compile group: 'org.apache.poi', name: 'poi', version: '3.9'
	compile group: 'net.sourceforge.nekohtml', name: 'nekohtml', version: '1.9.22'
	compile fileTree(dir:'lib',include:['*.jar'])
	runtime('mysql:mysql-connector-java')
	testCompile('org.springframework.boot:spring-boot-starter-test')
}
